--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = m5stack-core2
 framework = arduino
-lib_deps = 
+lib_deps =
 	m5stack/M5Core2@^0.1.9
 	mikalhart/TinyGPSPlus@^1.1.0
+monitor_speed = 115200
